Correccion de padding y bloque 2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">U movil</string>
     <string name="logo">logo</string>
     <string name="ii">INFORMACION DE INTERES</string>
+    <string name="is">INGENIERIA DE SOFTWARE</string>
 </resources>
