--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="Fm">FUNDAMENTOS DE MATEMATICAS</string>
     <string name="IIS">INTRODUCCION ING. SOFTWARE</string>
     <string name="CD">CALCULO DIFERENCIAL</string>
+    <string name="vd">VIDEO</string>
 </resources>
