--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-        <string name="app_name">U Mobile</string>
+        <string name="app_name">U Movil</string>
         <string name="logo">logo</string>
         <string name="ii">Information of Interest</string>
         <string name="is">Software Engineering</string>
@@ -23,5 +23,6 @@
         <string name="IIS">Introduction to Software Engineering</string>
         <string name="CD">Diferential Calculus</string>
         <string name="vd">VIDEO</string>
+        <string name="no">NEWS</string>
 
 </resources>
