--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="IIS">INTRODUCCION ING. SOFTWARE</string>
     <string name="CD">CALCULO DIFERENCIAL</string>
     <string name="vd">VIDEO</string>
+    <string name="no">NOTICIAS</string>
 </resources>
