Versión 1.011 11052019 16:38 pm, Se nyeva activity de noticias

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -24,5 +24,8 @@
         <string name="CD">Diferential Calculus</string>
         <string name="vd">VIDEO</string>
         <string name="no">NEWS</string>
+        <string name="tips">TIPS</string>
+        <string name="entretenimiento">ENTERTAIMENT</string>
+        <string name="generales">GENERAL</string>
 
 </resources>
