--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,31 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-        <string name="app_name">U Movil</string>
-        <string name="logo">logo</string>
-        <string name="ii">Information of Interest</string>
-        <string name="is">Software Engineering</string>
-        <string name="Share">Share</string>
-        <string name="About">About</string>
-        <string name="Exit">Exit</string>
-        <string name="Search">Search</string>
-        <string name="Home">Home</string>
-        <string name="s1">1. Semester</string>
-        <string name="s2">2. Semester</string>
-        <string name="s3">3. Semester</string>
-        <string name="s4">4. Semester</string>
-        <string name="s5">5. Semester</string>
-        <string name="titulo">U Mobile</string>
+        <string name="app_name">U MOVIL</string>
+        <string name="logo">LOGO</string>
+        <string name="ii">INFORMATION OF INTEREST</string>
+        <string name="is">SOFTWARE ENGINEERING</string>
+        <string name="Home">HOME</string>
+        <string name="s1">1. SEMESTER</string>
+        <string name="s2">2. SEMESTER</string>
+        <string name="s3">3. SEMESTER</string>
+        <string name="s4">4. SEMESTER</string>
+        <string name="s5">5. SEMESTER</string>
+        <string name="titulo">U MOVIL</string>
         <string name="Mead">MEAD</string>
-        <string name="CI">Life Proyect</string>
-        <string name="Pb">Basic Programming</string>
-        <string name="Fm">Math Basics</string>
-        <string name="IIS">Introduction to Software Engineering</string>
-        <string name="CD">Diferential Calculus</string>
+        <string name="CI">LIFE PROYECT</string>
+        <string name="Pb">BASIC PROGRAMMING</string>
+        <string name="Fm">MATH BASICS</string>
+        <string name="IIS">INTRODUCTION TO SOFTWARE ENGINEERING</string>
+        <string name="CD">DIFERENTIAL CALCULUS</string>
         <string name="vd">VIDEO</string>
         <string name="no">NEWS</string>
-        <string name="tips">TIPS</string>
-        <string name="entretenimiento">ENTERTAIMENT</string>
-        <string name="generales">GENERAL</string>
+
 
 </resources>
