--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -19,6 +19,7 @@
         <string name="CD">DIFERENTIAL CALCULUS</string>
         <string name="vd">VIDEO</string>
         <string name="no">NEWS</string>
-
-
+        <string name="t1">TIP´S</string>
+        <string name="t2">CAMPUS</string>
+        <string name="t3">GEEK</string>
 </resources>
