--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="CD">CALCULO DIFERENCIAL</string>
     <string name="vd">VIDEO</string>
     <string name="no">NOTICIAS</string>
-
+    <string name="t1">TIP´S</string>
+    <string name="t2">CAMPUS</string>
+    <string name="t3">GEEK</string>
 </resources>
