--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,10 @@
     <string name="t1">TIP´S</string>
     <string name="t2">CAMPUS</string>
     <string name="t3">GEEK</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+
+    <string name="f1_menu">Correo</string>
+    <string name="f2_menu">Acerda de</string>
+    <string name="f3_menu">Informacion</string>
 </resources>
