--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -22,7 +22,7 @@
         <string name="t1">TIP´S</string>
         <string name="t2">CAMPUS</string>
         <string name="t3">GEEK</string>
-    <string name="f1_menu">EMAIL</string>
+    <string name="f1_menu">CONTACT US</string>
     <string name="f2_menu">ABOUT</string>
         <string name="f3_menu">INFORMATION</string>
 </resources>
