--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-        <string name="app_name">U MOVIL</string>
-        <string name="logo">LOGO</string>
-        <string name="ii">INFORMATION OF INTEREST</string>
-        <string name="is">SOFTWARE ENGINEERING</string>
-        <string name="Home">HOME</string>
-        <string name="s1">1. SEMESTER</string>
-        <string name="s2">2. SEMESTER</string>
-        <string name="s3">3. SEMESTER</string>
-        <string name="s4">4. SEMESTER</string>
-        <string name="s5">5. SEMESTER</string>
-        <string name="titulo">U MOVIL</string>
-        <string name="Mead">MEAD</string>
-        <string name="CI">LIFE PROYECT</string>
-        <string name="Pb">BASIC PROGRAMMING</string>
-        <string name="Fm">MATH BASICS</string>
-        <string name="IIS">INTRODUCTION TO SOFTWARE ENGINEERING</string>
-        <string name="CD">DIFERENTIAL CALCULUS</string>
-        <string name="vd">VIDEO</string>
-        <string name="no">NEWS</string>
-        <string name="t1">TIP´S</string>
-        <string name="t2">CAMPUS</string>
-        <string name="t3">GEEK</string>
+    <string name="app_name">U MOVIL</string>
+    <string name="logo">LOGO</string>
+    <string name="ii">INFORMATION OF INTEREST</string>
+    <string name="is">SOFTWARE ENGINEERING</string>
+    <string name="Home">HOME</string>
+    <string name="s1">1. SEMESTER</string>
+    <string name="s2">2. SEMESTER</string>
+    <string name="s3">3. SEMESTER</string>
+    <string name="s4">4. SEMESTER</string>
+    <string name="s5">5. SEMESTER</string>
+    <string name="titulo">U MOVIL</string>
+    <string name="Mead">MEAD</string>
+    <string name="CI">LIFE PROYECT</string>
+    <string name="Pb">BASIC PROGRAMMING</string>
+    <string name="Fm">MATH BASICS</string>
+    <string name="IIS">INTRODUCTION TO SOFTWARE ENGINEERING</string>
+    <string name="CD">DIFERENTIAL CALCULUS</string>
+    <string name="vd">VIDEO</string>
+    <string name="no">NEWS</string>
+    <string name="t1">TIP´S</string>
+    <string name="t2">CAMPUS</string>
+    <string name="t3">GEEK</string>
     <string name="f1_menu">CONTACT US</string>
     <string name="f2_menu">ABOUT</string>
-        <string name="f3_menu">INFORMATION</string>
+    <string name="f3_menu">INFORMATION</string>
+    <string name="tips">TIPS</string>
+    <string name="ta">HELP TEXTS</string>
 </resources>
